One step closer

--- a/distributed-ui/src/main/res/layout/activity_fragment_manager.xml
+++ b/distributed-ui/src/main/res/layout/activity_fragment_manager.xml
@@ -8,10 +8,25 @@
     android:orientation="vertical"
     tools:context="com.erhannis.android.distributeduitest.FragmentManagerActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_weight="0"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvFragments"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         tools:listitem="@layout/snippet_fragment_location"/>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_weight="0"/>
 
 </LinearLayout>
