--- a/distributed-ui/src/main/res/layout/activity_satellite.xml
+++ b/distributed-ui/src/main/res/layout/activity_satellite.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.erhannis.android.distributeduitest.SatelliteActivity"
+    tools:context="com.erhannis.android.distributedui.SatelliteActivity"
     android:orientation="vertical">
 
     <LinearLayout
